# DisinfoDesk

./: .dockerignore  .env.example  .gitignore  404.html  App.tsx  Dockerfile  LICENSE  README.md  budget.json  constants.ts  docker-compose.yml  eslint.config.js  index.html  index.tsx  lighthouserc.json  manifest.json  metadata.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  robots.txt  sitemap.xml  styles.css  sw.js  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/: copilot-instructions.md  dependabot.yml
__tests__/: app.test.ts
components/: AuthorDetail.tsx  AuthorLibrary.tsx  DangerousNarratives.tsx  Dashboard.tsx  DatabaseManager.tsx  DebunkChat.tsx  ErrorBoundary.tsx  FactCheckWizard.tsx  Help.tsx  Layout.tsx  LazyTelemetryChart.tsx  LazyViralityChart.tsx  MediaCulture.tsx  MediaDetail.tsx  MyAnalyses.tsx  OmniSearch.tsx  OnboardingTour.tsx  PrivacyPolicy.tsx  SatireGenerator.tsx  Settings.tsx  SharedView.tsx  TheoryDetail.tsx  TheoryEditor.tsx  TheoryList.tsx  ViralAnalysis.tsx
config/: system.ts  theme.ts
contexts/: LanguageContext.tsx  SettingsContext.tsx  ToastContext.tsx
coverage/: coverage-final.json  index.html
data/: authors.ts  enriched.ts  esoteric.ts  expansion.ts  geopolitics.ts  historical.ts  index.ts  media.ts  modern_myths.ts  pseudoscience.ts
docs/: INDEXEDDB.md  SYSTEM_AUDIT_2026-03-09.md
e2e/: app.spec.ts
hooks/: useIntersectionObserver.ts  useLocalStorage.ts  useOnlineStatus.ts  usePerformance.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+180 files in other folders)
