[package]
name = "disinfodesk"
version = "1.0.0"
description = "DisinfoDesk Desktop Application"
authors = ["qnbs"]
edition = "2021"

[lib]
name = "disinfodesk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
